--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/WORK/Coding stuff/Java/External Library/gson-2.10.1.jar"/>
+	<classpathentry kind="lib" path="C:/WORK/Coding stuff/Java/External Library/dnsjava-3.6.3.jar"/>
+	<classpathentry kind="lib" path="C:/WORK/Coding stuff/Java/External Library/slf4j-api-2.0.17.jar"/>
+	<classpathentry kind="lib" path="C:/WORK/Coding stuff/Java/External Library/slf4j-simple-2.0.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
